--- a/{{ cookiecutter.formula_name }}-formula/test/single/Vagrantfile
+++ b/{{ cookiecutter.formula_name }}-formula/test/single/Vagrantfile
@@ -16,15 +16,12 @@ Vagrant.configure(2) do |config|
   config.vm.synced_folder "../salt", "/srv/salt"
   config.vm.synced_folder "../pillar", "/srv/pillar/"
   # Testing with tox and testinfra
-  config.vm.synced_folder "../testinfra", "/vagrant/testinfra"
+  # config.vm.synced_folder "../testinfra", "/vagrant/testinfra"
 
   config.vm.provider "virtualbox" do |vb|
-    vb.name = "kafka-formula"
-    vb.memory = "2048"
+    vb.name = "{{ cookiecutter.formula_name }}-formula"
+    vb.memory = "1024"
   end
-
-  config.vm.provision "shell", inline: "sudo apt-get install -y python-git python-pip"
-  config.vm.provision "shell", inline: "sudo pip install tox"
 
   config.vm.provision :salt do |salt|
     salt.masterless = true
@@ -32,7 +29,8 @@ Vagrant.configure(2) do |config|
     salt.run_highstate = true
   end
 
-  config.vm.provision "test", type: "shell" do |t|
-    t.inline = "tox -c /vagrant/tox.ini"
-  end
+  #config.vm.provision "shell", inline: "sudo pip install tox"
+  #config.vm.provision "test", type: "shell" do |t|
+  #  t.inline = "tox -c /vagrant/tox.ini"
+  #end
 end
