--- a/{{ cookiecutter.formula_name }}-formula/test/cluster/Vagrantfile
+++ b/{{ cookiecutter.formula_name }}-formula/test/cluster/Vagrantfile
@@ -52,9 +52,8 @@ Vagrant.configure(2) do |config|
     master.vm.provision :shell, inline: "sudo apt-get install -y python-git python-pip"
 
     master.vm.provision :salt do |salt|
-      salt.run_highstate = true
+      salt.run_highstate = false
       salt.install_master = true
-      salt.no_minion = true
       salt.master_config = "conf/master"
       salt.master_key = "keys/master.pem"
       salt.master_pub = "keys/master.pub"
