--- a/{{ cookiecutter.formula_name }}-formula/pillar.example
+++ b/{{ cookiecutter.formula_name }}-formula/pillar.example
@@ -1,6 +1,5 @@
 {{ cookiecutter.formula_name }}:
-  lookup:
-    pkg: my{{ cookiecutter.formula_name }}
-    conf_file: /usr/local/etc/{{ cookiecutter.formula_name }}/{{ cookiecutter.formula_name }}.conf
+  pkg: my{{ cookiecutter.formula_name }}
+  conf_file: /etc/{{ cookiecutter.formula_name }}/{{ cookiecutter.formula_name }}.conf
   config:
     key: othervalue
