--- a/{{ cookiecutter.formula_name }}-formula/test/cluster/Vagrantfile
+++ b/{{ cookiecutter.formula_name }}-formula/test/cluster/Vagrantfile
@@ -7,7 +7,7 @@ required_plugins.each do |plugin|
 end
 
 Vagrant.configure(2) do |config|
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "ubuntu/xenial64"
 
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
