--- a/{{ cookiecutter.formula_name }}-formula/test/single/Vagrantfile
+++ b/{{ cookiecutter.formula_name }}-formula/test/single/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "ubuntu/xenial64"
 
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
