--- a/{{ cookiecutter.formula_name }}-formula/test/cluster/Vagrantfile
+++ b/{{ cookiecutter.formula_name }}-formula/test/cluster/Vagrantfile
@@ -17,8 +17,6 @@ Vagrant.configure(2) do |config|
   config.hostmanager.manage_guest = true
   config.hostmanager.include_offline = true
 
-  config.vm.provision :shell, inline: "sudo locale-gen en_IE.UTF-8"
-
   (1..3).each do |m|
     config.vm.define "min#{m}" do |min|
       min.vm.network "private_network", ip: "172.16.199.1#{m}"
@@ -31,6 +29,7 @@ Vagrant.configure(2) do |config|
 
       min.vm.provision :salt do |salt|
         salt.minion_config = "conf/minion"
+        salt.minion_id = "min#{m}"
         salt.minion_key = "keys/min#{m}.pem"
         salt.minion_pub = "keys/min#{m}.pub"
       end
@@ -48,8 +47,6 @@ Vagrant.configure(2) do |config|
       vb.name = "{{ cookiecutter.formula_name }}-master"
       vb.memory = "1024"
     end
-
-    master.vm.provision :shell, inline: "sudo apt-get install -y python-git python-pip"
 
     master.vm.provision :salt do |salt|
       salt.run_highstate = false
